# xz-rs

./: .gitignore  Cargo.toml  README.md  test.sh
benches/: bench.rs
examples/: alloc.rs  no_std_no_alloc.rs  no_std_static_mem.rs  std.rs
src/: bcj.rs  clamp.rs  decoder.rs  lib.rs  stl.rs
tests/: changeing_buffer.rs  dict_too_big.rs  mintest.rs  no_buf.rs  one_byte.rs  perf_test.rs  test.rs  test_greedy.rs  test_large_seeded.rs  tiny_stack.rs
xzcheck/: Cargo.toml  README.md
xzcheck/src/: main.rs
